--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 
 .DS_Store
 LEDs.numbers
+build/
 
 # Created by https://www.toptal.com/developers/gitignore/api/cmake,ninja,c
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake,ninja,c
